--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
       
       <div class="search-results-container">
         <!-- Your specified widget with custom filters -->
-        <div id="MBBv3_FeaturedGallery" filter="mls_id:demo+listing_status:active+year_min:2025+representation_type:any_listing+limit:12+order:create_dt desc"></div>
+        <div id="MBBv3_SearchForm" filter="mls_id:tx521+listing_status:active+representation_type:any_listing"></div>
       </div>
     </div>
   </main>
